# powertools-minimal

./: README.md  pyproject.toml
src/minimal_powertools/: app.py
tests/: conftest.py  test_app.py
